syntax = "proto3";
package killer.proto;

enum ColliderType
{
	BOX     = 0;
	SPHERE  = 1;
	CAPSULE = 2;
	MESH    = 3;
}

message Vector3
{
	 double x = 1;
	 double y = 2;
	 double z = 3;
}

message Vector4
{
	 double x = 1;
	 double y = 2;
	 double z = 3;
	 double w = 4;
}

message U3DPhysxScene
{
	 int32 id                         = 1;
	 string scene_name                = 2;
	repeated U3DPhysxBox box_collider         = 3;
	repeated U3DPhysxSphere sphere_collider   = 4;
	repeated U3DPhysxCapsule capsule_collider = 5;
	repeated U3DPhysxMesh mesh_collider       = 6;
}

message U3DPhysxSphere
{
	 int32 id          = 1;
	 ColliderType type = 2;
	 Vector3 pos       = 3;
	 double radius     = 4;
	 Vector4 rotation  = 5;
}

message U3DPhysxBox
{
	 int32 id          = 1;
	 ColliderType type = 2;
	 Vector3 pos       = 3;
	 double x_extents  = 4;
	 double y_extents  = 5;
	 double z_extents  = 6;
	 Vector4 rotation  = 7;
}

message U3DPhysxCapsule
{
	 int32 id          = 1;
	 ColliderType type = 2;
	 Vector3 pos       = 3;
	 double raduis     = 4;
	 double height     = 5;
	 Vector4 rotation  = 6;
}

message U3DPhysxMesh
{
	 int32 id           = 1;
	 ColliderType type  = 2;
	 int32 vertex_count = 3;
	repeated Vector3 vertices   = 4;
	 Vector4 rotation   = 5;
}